d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Qualification_Question__c/LQW_Qualification_Question__c.object-meta.xml
<CustomObject>
            <description>Stores configurable qualification questions for the Lead Qualification Wizard. Each question can be activated/deactivated, ordered, marked as a dealbreaker, and assigned a score value. Questions are displayed to sales representatives when qualifying leads.</description>
            <label>Qualification Question</label>
            <nameField>
                <displayFormat>QQ-{00000}</displayFormat>
                <label>Question Number</label>
                <type>AutoNumber</type>
            </nameField>
            <pluralLabel>Qualification Questions</pluralLabel>
            <sharingModel>ReadWrite</sharingModel>
        </CustomObject>