d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Qualification_Question__c/fields/LQW_Dealbreaker_Value__c.field-meta.xml
<CustomField>
            <fullName>LQW_Dealbreaker_Value__c</fullName>
            <label>Dealbreaker Value</label>
            <description>Specifies which answer (Yes or No) triggers the dealbreaker logic and auto-disqualifies the lead</description>
            <type>Picklist</type>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
            <valueSet>
                <restricted>true</restricted>
                <valueSetDefinition>
                    
                    <value>
                        <fullName>Yes</fullName>
                    </value>
                    
                    <value>
                        <fullName>No</fullName>
                    </value>
                    
                </valueSetDefinition>
            </valueSet>
        </CustomField>