d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Qualification_Question__c/fields/LQW_Is_Active__c.field-meta.xml
<CustomField>
            <fullName>LQW_Is_Active__c</fullName>
            <label>Is Active</label>
            <description>Controls whether this question is active and displayed in the Lead Qualification Wizard</description>
            <type>Checkbox</type>
            <defaultValue>true</defaultValue>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>