d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Qualification_Question__c/fields/LQW_Is_Dealbreaker__c.field-meta.xml
<CustomField>
            <fullName>LQW_Is_Dealbreaker__c</fullName>
            <label>Is Dealbreaker</label>
            <description>Marks this question as a dealbreaker that can automatically disqualify leads based on the response</description>
            <type>Checkbox</type>
            <defaultValue>false</defaultValue>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>