d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Qualification_Question__c/fields/LQW_Point_Earning_Answer__c.field-meta.xml
<CustomField>
            <fullName>LQW_Point_Earning_Answer__c</fullName>
            <label>Point Earning Answer</label>
            <description>Specifies which answer (Yes, No, or Both) earns points for this question. Controls the scoring logic to allow flexible point assignment based on question type.</description>
            <type>Picklist</type>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
            <valueSet>
                <restricted>true</restricted>
                <valueSetDefinition>
                    
                    <value>
                        <fullName>Yes</fullName>
                    </value>
                    
                    <value>
                        <fullName>No</fullName>
                    </value>
                    
                    <value>
                        <fullName>Both</fullName>
                        <default>true</default>
                        <label>Both</label>
                    </value>
                    
                </valueSetDefinition>
            </valueSet>
        </CustomField>