d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Qualification_Question__c/fields/LQW_Question_List__c.field-meta.xml
<CustomField>
            <fullName>LQW_Question_List__c</fullName>
            <label>Question List</label>
            <description>The question list that this qualification question belongs to. Each question must be associated with a question list to control which questions are displayed for different lead types.</description>
            <type>Lookup</type>
            <required>true</required>
            <referenceTo>LQW_Question_List__c</referenceTo>
            <relationshipLabel>Qualification Questions</relationshipLabel>
            <relationshipName>LQW_Qualification_Questions</relationshipName>
            <deleteConstraint>Restrict</deleteConstraint>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>