d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Qualification_Question__c/fields/LQW_Question_Order__c.field-meta.xml
<CustomField>
            <fullName>LQW_Question_Order__c</fullName>
            <label>Question Order</label>
            <description>Controls the display order of questions in the wizard. Lower numbers appear first.</description>
            <type>Number</type>
            <precision>3</precision>
            <scale>0</scale>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
        </CustomField>