d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Qualification_Question__c/fields/LQW_Question_Text__c.field-meta.xml
<CustomField>
            <fullName>LQW_Question_Text__c</fullName>
            <label>Question Text</label>
            <description>The text of the qualification question displayed to users in the Lead Qualification Wizard</description>
            <type>Text</type>
            <length>255</length>
            <required>true</required>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>