d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Qualification_Question__c/fields/LQW_Score_Value__c.field-meta.xml
<CustomField>
            <fullName>LQW_Score_Value__c</fullName>
            <label>Score Value</label>
            <description>Point value assigned to this question for calculating the lead quality score</description>
            <type>Number</type>
            <precision>3</precision>
            <scale>0</scale>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
        </CustomField>