d253bb86-da64-4475-8876-5452079f210e/force-app/main/default/objects/LQW_Qualification_Question__c/listViews/LQW_Active_Questions.listView-meta.xml
<ListView>
            <fullName>LQW_Active_Questions</fullName>
            <label>Active Questions</label>
            <filterScope>Everything</filterScope>
            
            <columns>NAME</columns>
            
            <columns>LQW_Question_Text__c</columns>
            
            <columns>LQW_Question_Order__c</columns>
            
            <columns>LQW_Is_Dealbreaker__c</columns>
            
            <columns>LQW_Score_Value__c</columns>

        </ListView>